# Academic-Agentic-RAG

./: .gitignore  AGENTIC_RAG_IMPROVEMENT_PLAN.md  README.md  REFACTOR_PLAN.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: citations.py  graph.py  memory.py  models.py  security.py  state.py  workflow.py  workflow_router.py
backend/app/api/: api_router.py  dependencies.py  security.py
backend/app/config/: constants.py  logging.py  settings.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  chat.py  chunk.py  citation.py  compare.py  paper.py  report.py  research.py  summary.py
backend/app/observability/: tracing.py
backend/app/parser/: __init__.py  chunker.py  cleaner.py  pdf_parser.py
backend/app/prompts/: compare.md  qa.md  router.md  summary.md
backend/app/services/: agentic_chat_workflow.py  chat_service.py  compare_service.py  embedding_service.py  llm_service.py  parser_service.py  pdf_index_service.py  pdf_service.py  rag_service.py  report_service.py  reranker_service.py  retriever_service.py  search_arxiv_service.py  search_service.py  summary_service.py  web_search_service.py
backend/app/storage/: __init__.py  agent_run_store.py  chat_history_store.py  file_storage.py  metadata_store.py
backend/app/tools/: __init__.py  arxiv_tool.py  embedding_tool.py  pdf_download_tool.py  retriever_tool.py  summary_tool.py
backend/app/utils/: file.py  timer.py
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: agentic_design.md  api.md  architecture.md  deployment.md  evaluation.md  security.md  workflow.md
backend/evals/: README.md  __init__.py  baselines.py  generate_dataset.py  local_fixture.py  metrics.py  models.py  offline_fixture.py  report.py  run_eval.py
backend/scripts/: clean_data.py  ingest.py  reindex.py
backend/tests/: test_repo_hygiene.py
(+146 files in other folders)
