[project]
name = "ai-research-assistant-backend"
version = "0.1.0"
description = "Backend for an AI research assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "pymupdf>=1.24.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.0.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docker*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
